# todo-tauri

./: .gitignore  Cargo.toml  index.html  readme.md  tailwind.config.js  trunk.toml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: app.rs  mod.rs  todo_item.rs  todo_modal.rs
src/entities/: mod.rs  todo.rs
