[package]
name = "todo-tauri"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
leptos = { version = "0.8.5", features = ["csr"] }
uuid = { version = "1.17.0", features = ["v4", "js"] }
chrono = { version = "0.4.41", features = ["serde", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.100", features = ["serde"] }
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[workspace]
members = ["src-tauri"]