[package]
name = "todo-tauri"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
uuid = { version = "1.19.0", features = ["v4", "js"] }
chrono = { version = "0.4.42", features = ["serde", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.106", features = ["serde"] }
wasm-bindgen-futures = "0.4.56"
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[workspace]
members = ["src-tauri"]